--- a/index.html
+++ b/index.html
@@ -393,13 +393,13 @@
 					Made with <i class="ion-heart"></i> By safvana
 				</p>
 				<p>Follow me on</p>
-					<a href="">
+					<a href="https://www.instagram.com/.safff._/profilecard/?igsh=MWdmNTZmZmpwOWc3YQ==">
 						<img src="./img/instalogo.png" alt="" style="height: 1em;">
 					</a>
-					<a href="">
+					<a href="https://www.linkedin.com/in/safvana-v-31036a1a7?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
 						<img src="./img/linkedin.png" alt="" style="height: 1em;">
 					</a>
-					<a href="">
+					<a href="https://github.com/Safvana17">
 						<img src="./img/gitlogo.png" alt="" style="height: 1em;">
 					</a>
 			</div>
